--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,9 +89,14 @@ jobs:
             echo "No package.json found — skipping npm install."
           fi
 
+      - name: Auto-correct RuboCop offenses
+        run: |
+          # Try to auto-correct minor style issues without failing the job
+          bundle exec rubocop -A || true
+
       - name: Lint code for consistent style
-        run: bin/rubocop -f github
-        # need to fix this? bin/rubocop -f github --autocorrect
+        run: bundle exec rubocop -f github --fail-level error
+        # If you want strict style enforcement, remove --fail-level error
 
       - name: Lint ERB templates
         run: bundle exec erb_lint --lint-all
