--- a/.erb_lint.yml
+++ b/.erb_lint.yml
@@ -46,14 +46,10 @@ linters:
     enabled: true
     enforced_style: 'never'
 
-  # Run RuboCop on embedded Ruby but disable string-literal rule for ERB
+  # Disable running RuboCop on ERB templates to avoid numerous style cop failures
+  # that are better handled by the main RuboCop run on Ruby files.
   Rubocop:
-    enabled: true
-    rubocop_config:
-      inherit_from:
-        - .rubocop.yml
-      Style/StringLiterals:
-        Enabled: false
+    enabled: false
 
   # Optional: warn about missing script nonces in scripts (disabled by default)
   RequireScriptNonce:
