--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "yaml.schemas": {
-        "https://www.schemastore.org/github-action.json": "file:///home/acidicts/vscode_projects/Metroid-Mania/.erb_lint.yml"
+        "https://www.schemastore.org/prettierrc.json": "file:///home/acidicts/vscode_projects/Metroid-Mania/.erb_lint.yml"
     }
 }
