feat: Add dev admin task for ensuring admin user with generated password
test: Update dashboard tests to reflect project shipping logic changes

test: Modify project controller tests for shipping and approval logic

test: Implement user credit update test for admin users

test: Enhance order creation tests to prevent duplicate pending orders

test: Adjust project creation and update tests for hackatime integration

feat: Introduce hackatime selector controller for managing project selections

feat: Create Ship model for tracking project shipments and associated credits

feat: Add retro sample view for local development previewing

feat: Implement image upload functionality for projects

fix: Add migrations for new project attributes and active storage setup

test: Add integration tests for project image uploads

test: Create unit tests for Ship model

--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -5,7 +5,8 @@ one:
   name: MyString
   repository_url: MyString
   status: MyString
-  hackatime_id: MyString
+  hackatime_ids:
+    - MyStringOne
   # give the fixture plenty of time so tests can create devlogs by default
   total_seconds: 86400
 
@@ -14,5 +15,6 @@ two:
   name: MyString
   repository_url: MyString
   status: MyString
-  hackatime_id: MyString
+  hackatime_ids:
+    - MyStringTwo
   total_seconds: 86400
