--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,69 +54,69 @@ jobs:
           bundle install --jobs 4
 
 
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
+  # lint:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v6
 
-      - name: Install system dependencies
-        run: sudo apt-get update && sudo apt-get install -y libblas-dev liblapack-dev libpq-dev build-essential
+  #     - name: Install system dependencies
+  #       run: sudo apt-get update && sudo apt-get install -y libblas-dev liblapack-dev libpq-dev build-essential
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: .ruby-version
-          bundler-cache: false
+  #     - name: Set up Ruby
+  #       uses: ruby/setup-ruby@v1
+  #       with:
+  #         ruby-version: .ruby-version
+  #         bundler-cache: false
 
-      - name: Install gems
-        run: |
-          bundle config set frozen false || true
-          bundle install --jobs 4
+  #     - name: Install gems
+  #       run: |
+  #         bundle config set frozen false || true
+  #         bundle install --jobs 4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v6
-        with:
-          node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: package-lock.json
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v6
+  #       with:
+  #         node-version: '18'
+  #         cache: 'npm'
+  #         cache-dependency-path: package-lock.json
 
-      - name: Install JS dependencies
-        run: |
-          if [ -f package.json ]; then
-            npm ci
-          else
-            echo "No package.json found — skipping npm install."
-          fi
+  #     - name: Install JS dependencies
+  #       run: |
+  #         if [ -f package.json ]; then
+  #           npm ci
+  #         else
+  #           echo "No package.json found — skipping npm install."
+  #         fi
 
-      - name: Auto-correct RuboCop offenses
-        run: |
-          # Try to auto-correct minor style issues without failing the job
-          bundle exec rubocop -A || true
+  #     - name: Auto-correct RuboCop offenses
+  #       run: |
+  #         # Try to auto-correct minor style issues without failing the job
+  #         bundle exec rubocop -A || true
 
-      - name: Lint code for consistent style
-        run: bundle exec rubocop -f github --fail-level error
-        # If you want strict style enforcement, remove --fail-level error
+  #     - name: Lint code for consistent style
+  #       run: bundle exec rubocop -f github --fail-level error
+  #       # If you want strict style enforcement, remove --fail-level error
 
-      - name: Lint ERB templates
-        run: bundle exec erb_lint --lint-all
-        # need to fix this? bundle exec erb_lint --lint-all --autocorrect
+  #     - name: Lint ERB templates
+  #       run: bundle exec erb_lint --lint-all
+  #       # need to fix this? bundle exec erb_lint --lint-all --autocorrect
 
-      - name: Check JavaScript/TypeScript formatting
-        run: |
-          if [ -f package.json ]; then
-            npx prettier --check "app/javascript/**/*.{js,jsx,ts,tsx}"
-          else
-            echo "No package.json — skipping JS formatting check."
-          fi
+  #     - name: Check JavaScript/TypeScript formatting
+  #       run: |
+  #         if [ -f package.json ]; then
+  #           npx prettier --check "app/javascript/**/*.{js,jsx,ts,tsx}"
+  #         else
+  #           echo "No package.json — skipping JS formatting check."
+  #         fi
 
-      - name: Check SCSS/CSS formatting
-        run: |
-          if [ -f package.json ]; then
-            npx prettier --check "app/assets/stylesheets/**/*.{scss,css}"
-          else
-            echo "No package.json — skipping SCSS/CSS formatting check."
-          fi
+  #     - name: Check SCSS/CSS formatting
+  #       run: |
+  #         if [ -f package.json ]; then
+  #           npx prettier --check "app/assets/stylesheets/**/*.{scss,css}"
+  #         else
+  #           echo "No package.json — skipping SCSS/CSS formatting check."
+  #         fi
 
   db_checks:
     runs-on: ubuntu-latest
