feat: Integrate Slack API support; add org management and user profile enhancements

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,20 @@
 HACKCLUB_CLIENT_ID=
 HACKCLUB_CLIENT_SECRET=
 
-APP_URL=
-HACKATIME_API_KEY=
+APP_URL=https://site.example.com
+HACKATIME_API_KEY=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
 # dev admin credentials used by seeds/tasks (safe defaults)
-AUTO_ADMIN_EMAIL=example@example.com
+AUTO_ADMIN_EMAIL=admin@example.com
 AUTO_ADMIN_PASSWORD=password
-
+# Auto Login admin on dev? 1 for yes, 0 for no
 AUTO_ADMIN=0
+
+# Slack Bot Token for Slack API requests
+SLACK_CLIENT_ID = 
+SLACK_CLIENT_SECRET = 
+SLACK_SIGNING_SECRET = 
+
+SLACK_BOT_TOKEN=
+
+ORG_TITLES =
+ORG_SLACK_IDS =
