--- a/.github/workflows/coolify_pusher.yml
+++ b/.github/workflows/coolify_pusher.yml
@@ -15,25 +15,45 @@ jobs:
           COOLIFY_API_URL: ${{ secrets.COOLIFY_API_URL }}
           COOLIFY_TOKEN: ${{ secrets.COOLIFY_TOKEN }}
         run: |
-          if [ -z "$COOLIFY_API_URL" ]; then
+          set -euo pipefail
+
+          # reference: curl https://app.coolify.io/api/v1/deploy --header 'Authorization: Token'
+          if [ -z "${COOLIFY_API_URL:-}" ]; then
             echo "ERROR: COOLIFY_API_URL secret is not set"
             exit 1
           fi
 
-          if [ -z "$COOLIFY_TOKEN" ]; then
+          if [ -z "${COOLIFY_TOKEN:-}" ]; then
             echo "ERROR: COOLIFY_TOKEN secret is not set"
             exit 1
           fi
 
-          # Send POST request to Coolify deploy endpoint (adjust -X/ -d as needed)
-          http_code=$(curl -s -o /dev/null -w "%{http_code}" -X GET "$COOLIFY_API_URL" \
-            -H "Authorization: Token $COOLIFY_TOKEN" \
+          # Normalize token in case the secret already contains a "Token " prefix
+          token="${COOLIFY_TOKEN#Token }"
+          token="${token#token }"
+
+          echo "Using COOLIFY_API_URL: ${COOLIFY_API_URL}"
+          echo "Token length: ${#token} characters"
+
+          method="POST"
+          payload='{}' # adjust payload if Coolify requires fields (project id, branch, etc.)
+
+          # Send POST request and capture body + HTTP status
+          response=$(curl -s -w "\n%{http_code}" -X "$method" "$COOLIFY_API_URL" \
+            -H "Authorization: Token $token" \
             -H "Content-Type: application/json" \
-            -d '{}')
+            -d "$payload")
+
+          http_code=$(echo "$response" | tail -n1)
+          body=$(echo "$response" | sed '$d')
 
           echo "Coolify API returned HTTP status: $http_code"
+          echo "Response body:"
+          echo "$body"
 
           if [ "$http_code" -ge 400 ]; then
-            echo "Deploy request failed"
+            echo "Deploy request failed (HTTP $http_code)"
             exit 1
           fi
+
+          echo "Deploy request succeeded (HTTP $http_code)"
